--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-- v0.0.0.2 - 26/07/2023
-  Auto Updating implemented
+- v0.0.1.0 - 27/07/2023
+  Additions:
+  - Added new button to allow to request update if previously "skipped" or "reminde me latered".
+  - Auto Updating implemented
+
 - v0.0.0.1 - 26/07/2023
   Project Creation
