--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+- v1.0.1.0 - 03/11/2023
+  Fixed:
+  - Crash that occurred when installing a local file.
+  - Crash taht occurred when deleting a mod.
+  - Delete button being triggered by right click instead of left.
+
 - v1.0.0.0 - 10/10/2023
   Initial public release.
 
