--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+1 v1.2.0.0 - 29/01/2024
+  New features:
+  - Gave TML the ability to install to the game folder and Techtonica_Data folder
+
 - v1.1.0.0 - 19/01/2024
   New features:
   - Blocked use if game folder is invalid
